# 4score-hackathon

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: main.tsx  styles.css
